[package]
name = "srcfiles"
version = "0.1.0"
authors = ["Mikhail Babenko <misha-babenko@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0", features = ["full", "extra-traits", "visit"] }
quote = "1.0"
